# picoproject

./: .gitignore  CONTRIBUTING.md  README.md  TESTING.md  pyproject.toml
src/picoproject/: __init__.py  main.py
src/picoproject/config/: commands.json  mpremote.json
src/picoproject/utils/: compilation.py  exceptions.py  exportation.py  installation.py  progress.py  project.py
tests/: test_command.py
