[project]
name = "picoproject"
description = "CLI library for MicroPython AWS IoT projects."
authors = [{name = "Andrew Ridyard", email = "ridyard12@gmail.com"}]
maintainers = [{name = "Andrew Ridyard", email = "ridyard12@gmail.com"}]
version = "0.0.2"
license = {file = "LICENSE"}
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
classifiers=[
    # 3 - Alpha | 4 - Beta | 5 - Production/Stable
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Embedded Systems",
]
keywords = ["cli", "typer", "micropython", "pico"]
dependencies = [
    "bump-my-version>=0.28.3",
    "mpremote>=1.24.0",
    "mpy-cross>=1.24.0.post2",
    "setuptools>=75.6.0",
    "typer>=0.13.0",
]

[dependency-groups]
dev = [
    "micropython-rp2-rpi-pico-w-stubs>=1.23.0.post2",
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.4",
]

[project.urls]
Repository = "https://github.com/andyrids/picoproject"
Issues = "https://github.com/andyrids/picoproject/issues"

[project.scripts]
CLI = "picoproject.main:app"

[tool.ruff]
exclude = ["export", "lib"]
indent-width = 4
line-length = 79

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
quote-style = "double"

[tool.ruff.lint]
select = [
    "D1",  # pydocstyle
    "E",   # pycodestyle
    "ERA", # commented out code
    "I",   # isort
    "W",   # pycodestyle
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
tmp_path_retention_count = 1
tmp_path_retention_policy = "failed"

[tool.hatch.build.targets.wheel]
packages = ["src/picoproject"]

[tool.bumpversion]
current_version = "0.0.2"
commit = true
commit_args = "--no-verify"
tag = true
tag_name = "v{new_version}"
tag_message = "chore: tag version update {current_version} -> {new_version}."
allow_dirty = false
message = "chore: version update {current_version} -> {new_version}."

[[tool.bumpversion.files]]
filename = "src/picoproject/__init__.py"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
